Added logging for classes and exceptions, added info controller